faet: add redis container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3.5'
 
 services:
+  redis:
+    image: redis:6.0.10-alpine
+    networks:
+      - traefik
+
   mysql:
     image: mysql:5.6
     networks:
