--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "notistack": "^1.0.3",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
