--- a/webapp/package.json
+++ b/webapp/package.json
@@ -68,8 +68,24 @@
     "@storybook/node-logger": "^6.1.17",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.17",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "mock-apollo-client": "^1.0.0",
+    "prettier": "^2.2.1",
     "storybook-addon-apollo-client": "^4.0.6",
     "storybook-react-router": "^1.0.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "yarn eslint --fix"
+    ]
   }
 }
