--- a/webapp/package.json
+++ b/webapp/package.json
@@ -73,6 +73,7 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "lint-staged": "^10.5.4",
     "mock-apollo-client": "^1.0.0",
     "prettier": "^2.2.1",
     "storybook-addon-apollo-client": "^4.0.6",
@@ -84,8 +85,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "yarn eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "yarn eslint --fix",
+      "prettier --write",
+      "git add"
     ]
   }
 }
