--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,6 +31,7 @@
     "_start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "ci": "yarn test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
